// Specifies that we're using Protocol Buffers version 3
syntax = "proto3";

// Defines the Go package path where the generated code will be placed
option go_package = "/protocol";

// Defines the main Student message structure with three fields
message Student{
  int64 id = 1;    // Unique identifier for student, uses 64-bit integer
                   // The number 1 is the field identifier used in binary encoding
  
  string name = 2; // Student's name as a string
                   // Field identifier 2
  
  int32 age = 3;   // Student's age as 32-bit integer
                   // Field identifier 3
}

// Message used as a parameter for searching students by ID
message SearchByID{
  int64 id = 1;    // The ID to search for
}

// Message used as a parameter for searching students by name
message SearchByName{
  string name = 1; // The name to search for
}

// Defines the gRPC service interface for student-related operations
service StudentService{
  // First RPC method: Gets a single student by their ID
  // Takes a SearchByID message and returns a Student message
  rpc GetStudentByID(SearchByID) returns (Student) {}
  
  // Second RPC method: Gets multiple students by their name
  // Takes a SearchByName message and returns a stream of Student messages
  // 'stream' keyword indicates that multiple Student messages can be returned
  rpc GetStudentsByName(SearchByName) returns (stream Student) {}
}